- added parameters mincoveredrel and mincoveredabs to heur_undercover to only run if problem is sufficiently nonlinear
- heur_undercover treats indicator constraints as nonlinear and fixes the binary variable for linearization
- speed up in linear constraint handler replacing aggregated variables
- speed up in SCIPboolarrayExtend() in misc.c replacing a for loop with BMSmoveMemoryArray() call
- speed up mps reader asking paramters only ones
- speed up in var.c changing some recursive calls into iterative calls and reducing the number of VARFIX event that are
  thrown for fixation, aggregation or multi-aggregations
- changed emphasis settings: knapsack disaggregation is now allowed in fast presolving, CG-MIP separator disabled in
  aggressive separation

plugins:
- added new presolver convertinttobin, which converts bounded integer variables to their binary representation, e.g.
  for integer variable 0 <= x <= 10 the binary variables y0, y1, y2, and y3 are created, such that
  1 y0 + 2 y1 + 4 y2 + 8 y3 <= 10 and x = 1 y0 + 2 y1 + 4 y2 + 8 y3
- added nlpdiving heuristic that comprises several civing heuristics using an NLP relaxation
- added new presolver gateextraction, which tries to find and-gates/constraints which are linearized
  e.g. (x + y + z >= 1, x + y <= 1 and x + z <= 1 => x == AND(~y,~z)), in special cases it also detects set-partitioning
  constraints e.g. (x + y + z >= 1, x + y <= 1, x + z <= 1 and y + z <= 1 => x + y + z == 1));
  gate-extractor is also able to detect logicor constraints and set-packing/-partitioning constraints with the same
  variables, to upgrade these both constraints to a set-partitioning constraint
- added reader for MI(NL)Ps in OSiL (Optimization Services Instance Language) format
- added new presolver components, that searches for independent components in the problem structure and solves
  these components as sub-SCIPs when they are small enough (per default <= 20 discrete variables, nodelimit of 10000)